fix alignment of info event tiles

--- a/src/skins/vector/css/matrix-react-sdk/views/rooms/_EventTile.scss
+++ b/src/skins/vector/css/matrix-react-sdk/views/rooms/_EventTile.scss
@@ -366,6 +366,10 @@ limitations under the License.
         padding-top: 4px;
     }
 
+    .mx_EventTile.mx_EventTile_info {
+        padding-top: 0px;
+    }
+
     .mx_EventTile .mx_SenderProfile {
         font-size: 13px;
     }
